# function_lifetime_diagram

./: README.md
dynamorio/core/: utils.c  utils.h
dynamorio/core/lib/: dr_tools.h  globals_api.h  instrument.c
examples/: config_gd32_mnist_template.cfg  config_interrupt_template.cfg  config_register_template.cfg
examples/gd32_mnist/: Makefile  main  mkstyle.sh  platformio.ini  prepare.sh
examples/gd32_mnist/include/: bimg.h  boardio.h  img_capt.h  mnist_app.h  model.h  spi0.h  spi_bb.h  tft.h  timing.h  tlfm_mnist.h  touch.h
examples/gd32_mnist/src/: bimg.c  boardio.c  img_capt.c  main.cpp  mnist_app.cpp  spi0.c  spi_bb.c  tft.c  timing.c  tlfm_mnist.cpp  touch.c
examples/gd32_mnist/tools/: custom_upload.py  gd32vf103_jlink.cfg  gd32vf103_jlink_flashelf.cfg
examples/gd32_mnist/training/: training.ipynb
examples/gd32_mnist/training/models/: model.cc  model_no_quant.cc
examples/mems_gyro_interrupt/: linker.ld
examples/mems_gyro_register/: Makefile  mems_gyro.h
fld/: FunctionLifetimeDiagram.py  addressTranslation.py  codeStructure.py  configuration.py  fileStructure.py  ftr_writer.py  generateFTRFile.py  simulator.py
fld/tracer/: CMakeLists.txt  dr_string.h  tracer_template.c
riscv-vp-plusplus/: Makefile
riscv-vp-plusplus/sw/: generateFTRFile.py
riscv-vp-plusplus/vp/: CMakeLists.txt
riscv-vp-plusplus/vp/src/core/common/: elf_loader.h
riscv-vp-plusplus/vp/src/core/rv32/: iss.cpp  syscall.cpp  syscall.h
riscv-vp-plusplus/vp/src/platform/: CMakeLists.txt
riscv-vp-plusplus/vp/src/platform/basic/: basic_timer.h  main.cpp  mems_gyro.h
(+4 files in other folders)
